// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders large service logo 1`] = `
<div>
  <img
    alt="matomo logo"
    class=""
    data-nimg="1"
    decoding="async"
    height="24"
    loading="lazy"
    src="/_next/image?url=%2Fimages%2Fdark%2Fmatomo.svg%23icon-logo&w=96&q=75"
    srcset="/_next/image?url=%2Fimages%2Fdark%2Fmatomo.svg%23icon-logo&w=48&q=75 1x, /_next/image?url=%2Fimages%2Fdark%2Fmatomo.svg%23icon-logo&w=96&q=75 2x"
    style="color: transparent;"
    title="matomo"
    width="34.896"
  />
</div>
`;

exports[`renders medium service logo 1`] = `
<div>
  <img
    alt="matomo logo"
    class=""
    data-nimg="1"
    decoding="async"
    height="22"
    loading="lazy"
    src="/_next/image?url=%2Fimages%2Fdark%2Fmatomo.svg%23icon-logo&w=64&q=75"
    srcset="/_next/image?url=%2Fimages%2Fdark%2Fmatomo.svg%23icon-logo&w=32&q=75 1x, /_next/image?url=%2Fimages%2Fdark%2Fmatomo.svg%23icon-logo&w=64&q=75 2x"
    style="color: transparent;"
    title="matomo"
    width="31.988"
  />
</div>
`;

exports[`renders small service logo 1`] = `
<div>
  <img
    alt="matomo logo"
    class=""
    data-nimg="1"
    decoding="async"
    height="18"
    loading="lazy"
    src="/_next/image?url=%2Fimages%2Fdark%2Fmatomo.svg%23icon-logo&w=64&q=75"
    srcset="/_next/image?url=%2Fimages%2Fdark%2Fmatomo.svg%23icon-logo&w=32&q=75 1x, /_next/image?url=%2Fimages%2Fdark%2Fmatomo.svg%23icon-logo&w=64&q=75 2x"
    style="color: transparent;"
    title="matomo"
    width="26.172"
  />
</div>
`;
